--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </div>
             <div id="placar">
                 <div id="jogador">
-                    <h2 id="jogador-nome">Player</h2>
+                    <h2 id="jogador-nome">Jogador</h2>
                     <h2 id="jogador-pontos">0</h2>
                     <ul id="jogador-escolha">
                         <li>
